# brvm-mcp-server

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  claude_desktop_config.json  pyproject.toml
src/brvm_mcp/: __init__.py  cache.py  server.py
src/brvm_mcp/models/: __init__.py
src/brvm_mcp/scrapers/: __init__.py
tests/: test_brvm.py  test_stress.py
